--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -51,6 +51,14 @@
                  <nav class="nav flex-column">
                     <a class="nav-link" href="{% url 'jewelry-list' %}">Все украшения</a>
                     <a class="nav-link" href="{% url 'stone-list' %}">Все самоцветы</a>
+                     {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Выход</a>
+                         <div class="text-success">Пользователь: {{ user.get_username }}</div>
+                         <a class="nav-link" href="{% url 'my-orders' %}">Мои заказы</a>
+                     {% else %}
+                        <a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Вход</a>
+                        <a class="nav-link" href="{% url 'signup'%}?next={{request.path}}">Регистрация</a>
+                     {% endif %}
                     </nav>
                  {% endblock sidebar %}
             </div>
